--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue": "^2.3.4",
+    "mockjs": "^1.1.0",
+    "sass": "^1.56.2",
     "vite": "^2.9.7",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-windicss": "^1.8.4",
     "windicss": "^3.5.1"
   }
