--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
     "mitt": "^3.0.0",
+    "pinia": "^2.0.28",
     "universal-cookie": "^4.0.4",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15",
