--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.1.11",
     "mitt": "^3.0.0",
     "pinia": "^2.0.28",
+    "pinia-plugin-persist": "^1.0.0",
     "universal-cookie": "^4.0.4",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15",
